fixed spacing between contact icons

--- a/src/stylesheets/Contact.css
+++ b/src/stylesheets/Contact.css
@@ -17,3 +17,6 @@
 .outlined-basic{
     color: white;
 }
+.nav-item-github{
+    padding-right: 1rem;
+}
